--- a/UFO-level-2/StarterCode/static/css/style.css
+++ b/UFO-level-2/StarterCode/static/css/style.css
@@ -94,7 +94,8 @@ select {
 /* The styles for the parallax */
 .hero {
   position: relative;
-  height: 550px;
+  /* height: 550px; */
+  height: 220px;
   padding: 20px;
   margin: 0;
   background: black;
@@ -105,7 +106,7 @@ select {
 }
 
 .hero h1 {
-  margin-top: 200px;
+  margin-top: 30px;
   font-size: 0.1rem;
   animation: title 1.2s forwards linear;
 }
